# Recruiter_backend

./: .editorconfig  .gitignore  LICENSE  Makefile  README.md  docker-compose.yml  local-docker-compose.yml  test-docker-compose.yml
app/: Dockerfile  alembic.ini  local.example.env  production.env  pyproject.toml  test.Dockerfile
app/alembic/: env.py
app/alembic/versions/: 2024-11-06_add_field.py
app/app/: config.py  db.py  main.py
app/app/api/: deps.py
app/app/managers/: __init__.py
app/app/models/: __init__.py  base.py
app/app/tests/: conftest.py
nginx/: Dockerfile  nginx.conf
